api done for video fetching

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -75,3 +75,8 @@
 .navbar-profile:hover .dropdown {
     display: block;
 }
+
+.nav-dark {
+    background: #141414;
+    transition: background 0.6s ease;
+}
