--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -80,3 +80,25 @@
     background: #141414;
     transition: background 0.6s ease;
 }
+
+
+@media (max-width: 800px) {
+    .navbar {
+        padding: 20px 4%;
+    }
+    .navbar-left ul {
+        display: none;
+    }
+    .navbar img {
+        height: 25px;
+    }
+}
+
+@media (max-width: 500px) {
+    .navbar img {
+        height: 30px;
+    }
+    .navbar-right {
+        gap: 10px;
+    }
+}
